--- a/frontend/inscription/inscription.html
+++ b/frontend/inscription/inscription.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inscription</title>
-</head>
-<body>
-    <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <title>Formulaire d'inscription</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Inscription</title>
+  <link rel="stylesheet" href="style.css" />
+  <!-- Font Awesome pour icônes -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
 <body>
   <div class="container">
     <h2>Inscription</h2>
     <form id="registrationForm">
-      <label for="name">Nom</label>
-      <input type="text" id="name" name="name" required>
+      <div class="input-group">
+        <label for="name"><i class="fas fa-user"></i> Nom</label>
+        <input type="text" id="name" name="name" required />
+      </div>
 
-      <label for="email">Adresse e-mail</label>
-      <input type="email" id="email" name="email" required>
+      <div class="input-group">
+        <label for="email"><i class="fas fa-envelope"></i> Adresse e-mail</label>
+        <input type="email" id="email" name="email" required />
+      </div>
 
-      <label for="password">Mot de passe</label>
-      <input type="password" id="password" name="password" required>
+      <div class="input-group">
+        <label for="password"><i class="fas fa-lock"></i> Mot de passe</label>
+        <input type="password" id="password" name="password" required />
+      </div>
 
-      <label for="confirmPassword">Confirmer le mot de passe</label>
-      <input type="password" id="confirmPassword" name="confirmPassword" required>
+      <div class="input-group">
+        <label for="confirmPassword"><i class="fas fa-lock"></i> Confirmer le mot de passe</label>
+        <input type="password" id="confirmPassword" name="confirmPassword" required />
+      </div>
 
       <button type="submit">S'inscrire</button>
       <p id="message"></p>
@@ -35,8 +38,5 @@
   </div>
 
   <script src="script.js"></script>
-</body>
-</html>
-
 </body>
 </html>
